[gd_scene load_steps=4 format=3 uid="uid://dp6al5cdu42qi"]

[ext_resource type="Script" path="res://scripts/water_spring.gd" id="1_5ieox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukkdm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tj63b"]
lifetime_randomness = 0.8
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 98, 0)
initial_velocity_min = 40.0
initial_velocity_max = 80.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="WaterSpring" type="Node2D" groups=["water_springs"]]
script = ExtResource("1_5ieox")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ukkdm")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_tj63b")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
